repair ut, revamp repsonse format